--- a/easystar/pom.xml
+++ b/easystar/pom.xml
@@ -624,7 +624,30 @@
 				</exclusion>
 			</exclusions>
 		</dependency> -->
+
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>codec</artifactId>
+			<version>1.10</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/commons-codec-1.10.jar</systemPath>
+		</dependency>
 		
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.6.2</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/gson-2.6.2.jar</systemPath>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>pingpp-java</artifactId>
+			<version>2.1.7</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/pingpp-java-2.1.7.jar</systemPath>
+		</dependency>
 	</dependencies>
 
 	<build>
