--- a/easystar/pom.xml
+++ b/easystar/pom.xml
@@ -648,6 +648,29 @@
 			<scope>system</scope>
 			<systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/pingpp-java-2.1.7.jar</systemPath>
 		</dependency>
+		
+		<!-- 短信验证码 -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.5.1</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/httpclient-4.5.1.jar</systemPath>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>httpcore</artifactId>
+			<version>4.4.3</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/httpcore-4.4.3.jar</systemPath>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.1.2</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/fastjson-1.1.2.jar</systemPath>
+		</dependency>
 	</dependencies>
 
 	<build>
